--- a/main/core/theme/mb/templates/base.html
+++ b/main/core/theme/mb/templates/base.html
@@ -205,13 +205,13 @@
         });
 
         const product_related__slider = new Swiper(".product-related__slider", {
-            slidesPerView: 2,
+            slidesPerView: 5,
             //slidesPerGroup: 1,
             loop: true,
             spaceBetween: 20,
             navigation: {
-                nextEl: ".index-work__next",
-                prevEl: ".index-work__prev",
+                nextEl: ".product-related__next",
+                prevEl: ".product-related__prev",
             },
             pagination: {
                 el: ".swiper-pagination",
