--- a/main/core/admin/templates/shop/product/product_add.html
+++ b/main/core/admin/templates/shop/product/product_add.html
@@ -94,6 +94,13 @@
               {{ form.slug }} {{ form.slug.errors }}
             </div>
             <div class="form__group">
+              <label for="{{ form.order_by.id_for_label }}" class="form__controls-label">
+                <span>*</span>
+                Сортировка :
+              </label>
+              {{ form.order_by }} {{ form.order_by.errors }}
+            </div>
+            <div class="form__group">
               <label for="{{ form.category.id_for_label }}" class="form__controls-label">Выбор категории :</label>
               {{ form.category }} {{ form.category.errors }}
             </div>
@@ -114,11 +121,16 @@
               {{ form.type_image }} {{ form.type_image.errors }}
               <label for="{{ form.type_image.id_for_label }}" class="form__controls-label">Отображение картинки ? : </label>
             </div>
+            <div class="form__group-checkbox">
+              {{ form.catalog }} {{ form.catalog.errors }}
+              <label for="{{ form.catalog.id_for_label }}" class="form__controls-label">Выводить в каталог ? : </label>
+            </div>
 
             <div class="form__group-checkbox">
               {{ form.status }} {{ form.status.errors }}
               <label for="{{ form.status.id_for_label }}" class="form__controls-label"> Опубликовать ? :</label>
             </div>
+
             <div class="form__group">
               <label for="{{ form.related_products.id_for_label }}" class="form__controls-label">Сопутствующий товар :</label>
               {{ form.related_products }} {{ form.related_products.errors }}
