--- a/main/core/admin/templates/components/admin-sidebar.html
+++ b/main/core/admin/templates/components/admin-sidebar.html
@@ -306,6 +306,7 @@
             <li><a href="{% url 'gallery_category_add' %}">Добавить категорию</a></li>
             <li><a href="{% url 'admin_gallery' %}">Список фотографий</a></li>
             <li><a href="{% url 'admin_gallery_add' %}">Добавить фотографию</a></li>
+            <li><a href="{% url 'upload_archive' %}">Загрузить фотографии в категорию</a></li>
           </ul>
         </div>
       </div>
