--- a/main/core/theme/mb/templates/pages/catalog/product.html
+++ b/main/core/theme/mb/templates/pages/catalog/product.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %} {% load static %} {% load thumbnail %}
+
+
 {% block title %}
 {% if product.meta_title %}
 {{ product.meta_title }}
@@ -119,15 +121,19 @@
                   <p>шт.</p>
                 </div>
               </div>
+
             </div>
           </div>
+          {% if product.price %}
           <p class="product-card__price">
             От {{ product.price }} ₽
-
-            <span class="product-card__note"> В связи с частыми изменениями цен у поставщиков, указанная информация о
-              ценах на сайте является ориентировочной. Точную информацию о ценах можно получить у менеджеров компании по
-              телефону или оставить заявку с сайта. </span>
           </p>
+          {% endif %}
+          <span class="product-card__note">
+            В связи с частыми изменениями цен у поставщиков, указанная информация о
+            ценах на сайте является ориентировочной. Точную информацию о ценах можно получить у менеджеров компании по
+            телефону или оставить заявку с сайта.
+          </span>
           <div class="product-card__action">
             {% csrf_token %}
             <a href="{% url 'cart_add' %}" rel="nofollow, noindex" class="product-card__add add-to-cart"
