--- a/#src/templates/admin/components/admin-sidebar.html
+++ b/#src/templates/admin/components/admin-sidebar.html
@@ -303,9 +303,10 @@
           <ul>
             <li><a href="{% url 'gallery_settings' %}">Настройки галереи</a></li>
             <li><a href="{% url 'admin_gallery_category' %}">Список категорий</a></li>
-            <li><a href="{% url 'admin_reviews_add' %}">Добавить категорию</a></li>
+            <li><a href="{% url 'gallery_category_add' %}">Добавить категорию</a></li>
             <li><a href="{% url 'admin_gallery' %}">Список фотографий</a></li>
             <li><a href="{% url 'admin_gallery_add' %}">Добавить фотографию</a></li>
+            <li><a href="{% url 'upload_archive' %}">Загрузить фотографии в категорию</a></li>
           </ul>
         </div>
       </div>
