--- a/#src/templates/theme/includes/card.html
+++ b/#src/templates/theme/includes/card.html
@@ -33,7 +33,7 @@
 </div>
 {% endif %}
 
-{% if not product.catalog %}
+<!-- {% if not product.catalog %}
 <div class="index-catalog__card card" itemscope itemtype="https://schema.org/Product">
   <div class="card__image" {% if product.type_image %}style="height: auto;" {% endif %}>
     {% if product.image %}
@@ -65,9 +65,9 @@
   </div>
   <a href="{{ product.get_absolute_url }}" class="card__content-link">Выбрать конфигурацию</a>
 </div>
-{% endif %}
+{% endif %} -->
 
-{% if request.path == "/category/ogradki/" %}
+{% if request.path == "/category/ogradki/" and not product.catalog %}
 <div class="index-catalog__card card">
   <div class="card__image" {% if product.type_image %}style="height: auto;" {% endif %}>
     {% if product.image %} {% if product.type_image %}
