--- a/#src/templates/theme/pages/category-detail.html
+++ b/#src/templates/theme/pages/category-detail.html
@@ -50,6 +50,20 @@
               {% endfor %}
             </div>
           </div>
+          <div class="pagging">
+            <a href="{% if images.has_previous %}?{% chenge_params page=images.previous_page_number %}{% else %}#{% endif %}"
+              class="pagging__arrow {% if not images.has_previous%}disabled{% endif %}">«</a>
+            <ul class="pagging__list">
+              {% for page in images.paginator.page_range %}
+              {% if page >= images.number|add:-2 and page <= images.number|add:2 %} <li>
+                <a href="?{% chenge_params page=page %}"
+                  class="pagging__item {% if images.number == page %}_active{% endif %}">{{page}}</a>
+                </li>
+                {% endif %} {% endfor %}
+            </ul>
+            <a href="{% if images.has_next %}?{% chenge_params page=images.next_page_number %}{% else %}#{% endif %}"
+              class="pagging__arrow">»</a>
+          </div>
         </div>
       </div>
     </div>
