--- a/#src/templates/theme/pages/category-detail.html
+++ b/#src/templates/theme/pages/category-detail.html
@@ -50,7 +50,7 @@
               {% endfor %}
             </div>
           </div>
-          <div class="pagging">
+          <!-- <div class="pagging">
             <a href="{% if images.has_previous %}?{% chenge_params page=images.previous_page_number %}{% else %}#{% endif %}"
               class="pagging__arrow {% if not images.has_previous%}disabled{% endif %}">«</a>
             <ul class="pagging__list">
@@ -63,7 +63,7 @@
             </ul>
             <a href="{% if images.has_next %}?{% chenge_params page=images.next_page_number %}{% else %}#{% endif %}"
               class="pagging__arrow">»</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
