--- a/main/core/theme/mb/templates/pages/catalog/product.html
+++ b/main/core/theme/mb/templates/pages/catalog/product.html
@@ -1,17 +1,15 @@
 {% extends "base.html" %} {% load static %} {% load thumbnail %}
 
-
 {% block title %}
 {% if product.meta_title %}
 {{ product.meta_title }}
 {% else %}
-Купить памятник {% if product.model %}модель {%filter lower%}{{product.model }}{% endfilter %}
-{% else %}
-{%filter lower%}{{product.name }}{% endfilter %}
+  {% if product.category == "Оградки"%}
+  Купить памятник из гранита {% if product.model %}модель {%filter lower%}{{product.model }}{% endfilter %}{% else %}{%filter lower%}{{product.name }}{% endfilter %}{% endif %} в Томске | Акрополь
+  {% else %}
+    Купить оградку  {% if product.model %}тип {%filter lower%}{{product.model }}{% endfilter %}{% else %}{%filter lower%}{{product.name }}{% endfilter %}{% endif %} в Томске | Акрополь
+  {% endif %}
 {% endif %}
-в Томске | Акрополь
-{% endif %}
-
 {% endblock %}
 
 {% block description %}
