--- a/#src/templates/theme/pages/index.html
+++ b/#src/templates/theme/pages/index.html
@@ -70,7 +70,7 @@
     <div class="index-stock__container">
       <div class="index-stock__grid">
         <a href="{% url 'stock_product' %}" class="index-stock__item index-stock__item--first">
-          <img src="{% static 'theme/mb/images/arki.jpg' %}" alt="Памятники со скидкой" title="Памятники со скидкой"
+          <img src="{% static 'theme/mb/images/skidka.jpg' %}" alt="Памятники со скидкой" title="Памятники со скидкой"
             class="index-stock__item-img" />
           <h2 class="index-stock__item-title">Памятники со <br />скидкой</h2>
           <p class="index-stock__item-discount"></p>
