--- a/main/core/theme/mb/templates/pages/index.html
+++ b/main/core/theme/mb/templates/pages/index.html
@@ -72,8 +72,8 @@
         <a href="{% url 'stock_product' %}" class="index-stock__item index-stock__item--first">
           <img src="{% static 'theme/mb/images/skidka.jpg' %}" alt="Памятники со скидкой" title="Памятники со скидкой"
             class="index-stock__item-img" />
-          <h2 class="index-stock__item-title">Памятники со <br />скидкой</h2>
-          <p class="index-stock__item-discount"></p>
+<!--          <h2 class="index-stock__item-title">Памятники со <br />скидкой</h2>-->
+<!--          <p class="index-stock__item-discount"></p>-->
         </a>
         {% if category_gallery %}
         {% for gal_cat in category_gallery %}
