--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -269,6 +269,10 @@
         line-height: 120%;
         font-weight: 700;
       }
+
+      .index-stock__item-img{
+        object-fit: none;
+      }
     }
   }
 
