--- a/#src/templates/theme/pages/catalog/product.html
+++ b/#src/templates/theme/pages/catalog/product.html
@@ -4,8 +4,7 @@
 {% if product.meta_title %}
 {{ product.meta_title }}
 {% else %}
-{{ product.category.id }}
-  {% if product.category == "Оградки" %}
+  {% if product.category.id  == 6 %}
   Купить памятник из гранита {% if product.model %}модель {%filter lower%}{{product.model }}{% endfilter %}{% else %}{%filter lower%}{{product.name }}{% endfilter %}{% endif %} в Томске | Акрополь
   {% else %}
     Купить оградку  {% if product.model %}тип {%filter lower%}{{product.model }}{% endfilter %}{% else %}{%filter lower%}{{product.name }}{% endfilter %}{% endif %} в Томске | Акрополь
