--- a/main/core/theme/mb/templates/pages/catalog/product.html
+++ b/main/core/theme/mb/templates/pages/catalog/product.html
@@ -138,7 +138,7 @@
             {% csrf_token %}
             <a href="{% url 'cart_add' %}" rel="nofollow, noindex" class="product-card__add add-to-cart"
               data-product-id="{{ product.id }}">Добавить в корзину</a>
-            <button type="button" class="product-card__btn" data-popup="consultation"
+            <button type="button" class="product-card__btn" data-popup="consultation-form"
               data-order="Консультаци по {{ product.model }}">Заказать консультацию</button>
           </div>
         </div>
