--- a/#src/templates/theme/pages/catalog/product.html
+++ b/#src/templates/theme/pages/catalog/product.html
@@ -28,7 +28,17 @@
 {% endblock %}
 
 {% block keywords %}
-{{ product.meta_keywords }}
+
+{% if product.meta_keywords %}
+  {{ product.meta_keywords }}
+{% else %}
+  {% if product.category|lower != "оградки" %}
+    {{ product.category.name }} {% if product.model %}модель {%filter lower%}{{product.model }}{% endfilter %}{% else %}{%filter lower%}{{product.name }}{% endfilter %}{% endif %}
+  {% else %}
+    {{ product.category.name }}  {% if product.model %}тип {%filter lower%}{{product.model }}{% endfilter %}{% else %}{%filter lower%}{{product.name }}{% endfilter %}{% endif %}
+  {% endif %}
+{% endif %}
+
 {%endblock %}
 {% block content %}
 
